<resources>
    <string name="app_name">TravelDBM</string>
    <string name="positive_button">Close</string>
    <string name="negative_button">Close</string>
    <string name="csv_file_not_found">The specified file was not found</string>
    <string name="search_description_text">Start searching your hotels using the magnifying glass button or click on the menu item to show favorites</string>
    <string name="show_favorites_menu_text">Show Favorites</string>
    <string name="search_hotels_title">Search Hotels</string>
    <string name="city_name_text">City Name:</string>
    <string name="enter_city_name_hint">Enter City Name</string>
    <string name="check_in_text">Check-in Date:</string>
    <string name="check_out_text">Check-out Date:</string>
    <string name="no_date_selected">No date selected</string>
    <string name="clarification_one">* Value must be between 2 and 5</string>
    <string name="clarification_two">* In case you want all the hotels without considering rating, enter a \'-\'</string>
    <string name="enter_stars_hint">3</string>
    <string name="search_hotels_button_text">Search Hotels</string>
    <string name="city_input_validation">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="choose_check_in_date_text">Choose Check-in Date</string>
    <string name="choose_check_out_date_text">Choose Check-out Date</string>
    <string name="pick_city">Choose City</string>
    <string name="mark_as_favorite_button_text">Mark as Favorite</string>
    <string name="details_button_text">Details</string>
    <string name="share_content_text">Share Content</string>
    <string name="general_photo_content_description">General Photo</string>
    <string name="services_photo_content_description">Services Photo</string>
    <string name="location_in_map_text">Location in Map</string>
    <string name="rooms_text">Rooms</string>
    <string name="amenities_text">Amenities</string>
    <string name="website_example"><u>https://www.booking.com/</u></string>
    <string name="description_text">Description</string>
    <string name="website_text">Website</string>
    <string name="go_to_website_button_text">Go to website</string>
    <string name="no_rooms_message">This hotel does not show room information. Please use contact details shown above or click on the link at the end of this screen to see rooms.</string>
    <string name="favorite_item_content_description">favorite_item</string>
    <string name="delete_favorite_button_text">Delete Favorite</string>
    <string name="no_favorites_message">You do not have any favorites yet, please add some favorites after searching hotels</string>
    <string name="no_favorites_widget_message">You do not have favorite hotels yet</string>
    <string name="no_website_message">This hotel does not have a website yet.</string>
    <string name="address_placeholder">Address: %1$s</string>
    <string name="phone_placeholder">Phone: %1$s</string>
    <string name="location_placeholder">Location: %1$s - %2$s</string>
    <string name="website_placeholder">http://%1$s</string>
    <string name="check_in_placeholder">Check-in: %1$s</string>
    <string name="check_out_placeholder">Check-out: %1$s</string>
    <string name="no_hotels_found_message">No hotels could be found for this city.</string>
    <string name="check_hotel_details_button_text">Check Hotel Details</string>
    <string name="hotel_name_placeholder">Hotel Name: %1$s</string>
    <string name="hotel_adapter_address_placeholder">Address:\n%1$s</string>
    <string name="hotel_adapter_min_price_placeholder">From %1$s</string>
    <string name="favorite_location_placeholder">Location: %1$s</string>
    <string name="hotel_icon">Hotel Icon</string>
    <string name="hotel_result_image">Hotel Result Image</string>
    <string name="gradient_image">Gradient Image</string>
    <string name="widget_hotel_image">Widget Hotel Image</string>
    <string name="favorite_hotels_title">Favorite Hotels</string>
    <string name="hotel_results_title">Hotel Results</string>
    <string name="already_in_favorites_message">This hotel is already in your favorites</string>
    <string name="error_type_not_recognized_message">error, type action not recognized</string>
    <string name="action_not_found">There was a problem with getting action from intent</string>
    <string name="error_retrieving_data_message">There was an error while retrieving the data</string>
    <string name="error_message_broadcast">There is a problem with the server right now, please try again later.</string>
    <string name="check_in_error_message">Check-in date must be before Check-out date. Choose Check-in date before</string>
    <string name="check_out_error_message">Check-out date must be after Check-in date. Choose Check-out date after</string>
    <string name="select_check_in_check_out">Select Check-in date and Check-out date</string>
    <string name="select_check_in">Select Check-in date</string>
    <string name="select_check_out">Select Check-out date</string>
    <string name="enter_valid_city_message">Enter a valid city</string>
    <string name="enter_city_name_message">Enter a city name</string>
    <string name="specify_country_message">Please, specify country</string>
    <string name="city_not_found_message">The city called %1$s couldn\'t be found in the database</string>
    <string name="ad_not_loaded_yet_message">The interstitial wasn\'t loaded yet.</string>
    <string name="widget_title">Favorite Hotels</string>
    <string name="hotel_added_successfully_message">The hotel was added successfully</string>
    <string name="hotel_add_problem_message">The hotel couldn\'t be added as favorite</string>
    <string name="hotel_deleted_successfully_message">Hotel deleted successfully</string>
    <string name="hotel_deletion_failed_message">Hotel deletion failed</string>
    <string name="hotel_updated_successfully_message">Hotel was updated successfully</string>
    <string name="hotel_problem_during_update_message">There was a problem during update</string>
    <string name="require_valid_property_code">Hotel requires valid property code</string>
    <string name="error_message_hotel_id_broadcast">There is a problem with the data from this hotel, please choose a different one.</string>
    <string name="contact_hotel_price_details_message">** Contact hotel for price details.</string>
    <string name="contact_hotel_for_room_price_message">** Contact hotel for room price.</string>
    <string name="logo_content_description">logo</string>

</resources>
