<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        android:orientation="vertical"
        tools:context=".SearchActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/city_name_text"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edit_text_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/edit_text_background"
            android:hint="@string/enter_city_name_hint"
            android:inputType="textCapWords"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFF00"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/number_of_stars_text"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="italic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <EditText
                android:id="@+id/edit_text_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/edit_text_background"
                android:hint="@string/enter_stars_hint"
                android:inputType="numberSigned"
                android:maxLength="1"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFF00"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/text_view_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/edit_text_stars"
                android:layout_toRightOf="@id/edit_text_stars"
                android:text="@string/clarification_one"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_stars"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/edit_text_stars"
                android:layout_toRightOf="@id/edit_text_stars"
                android:text="@string/clarification_two"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/search_hotels_button_text"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</FrameLayout>