<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_background"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/vacation"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:gravity="center_horizontal|start"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:padding="8dp"
                tools:text = "Hotel Name"
                android:id="@+id/hotel_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:gravity="center_horizontal|start"
                android:textColor="#FFFFFF"
                android:paddingTop="8dp"
                android:textSize="12sp"
                android:textStyle="italic"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                tools:text = "Hotel Address"
                android:id="@+id/hotel_address_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:gravity="center_horizontal|start"
                android:textColor="#FFFFFF"
                android:paddingTop="8dp"
                android:textSize="12sp"
                android:textStyle="italic"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                tools:text = "Hotel Min Price"
                android:id="@+id/hotel_min_price_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:background="@color/details_button_background"
            android:id="@+id/details_button"
            android:textColor="#FFFFFF"
            android:layout_margin="8dp"
            android:layout_weight="4"
            android:text="@string/details_button_text"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:background="@color/mark_as_favorite_button_background"
            android:id="@+id/mark_as_favorite_button"
            android:textColor="#FFFFFF"
            android:layout_margin="8dp"
            android:layout_weight="5"
            android:text="@string/mark_as_favorite_button_text"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageView
            app:srcCompat="@drawable/share_white_24dp"
            android:background="@color/share_button_color"
            android:id="@+id/share_general_button"
            android:contentDescription="@string/share_content_text"
            android:padding="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />
    </LinearLayout>

</LinearLayout>