<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8e7cc3"
        android:orientation="vertical"
        tools:context=".HotelDetailActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#45818e"
            android:padding="24dp"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            tools:text="Hotel Sheraton and Convention Center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:text="Description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    tools:text="Location: Lima - Peru" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    tools:text="Address: Avenida Morales 345 - San Borja - Lima" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    tools:text="Phone:  +702-128-4452" />


            </LinearLayout>


            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layout_weight="1.2"
                android:adjustViewBounds="true"
                android:contentDescription="@string/general_photo_content_description"
                android:src="@drawable/hotel_general" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="#93c47d" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp"
                    android:text="@string/services_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    tools:text="Air Conditioning\nDesk\nShower\nTV\nTelephone\nMinibar\nBalcony" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:contentDescription="@string/services_photo_content_description"
                android:src="@drawable/hotel_services" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="#93c47d" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:text="@string/rooms_text" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_rooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="true" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="#93c47d" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:text="@string/location_in_map_text" />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                map:cameraZoom="15.5"
                tools:context=".HotelDetailActivity" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="#93c47d" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:text="Website" />

            <TextView
                android:id="@+id/hotel_website_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="italic"
                tools:text="@string/website_example"/>

        </LinearLayout>




    </LinearLayout>
</ScrollView>